WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256976
[Debug] imported/w3c/web-platform-tests/html/browsers/browsing-the-web/overlapping-navigations-and-traversals/cross-document-traversal-same-document-nav.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=256976
Summary
[Debug] imported/w3c/web-platform-tests/html/browsers/browsing-the-web/overla...
Chris Dumez
Reported
2023-05-18 12:43:22 PDT
[Debug] imported/w3c/web-platform-tests/html/browsers/browsing-the-web/overlapping-navigations-and-traversals/cross-document-traversal-same-document-nav.html and imported/w3c/web-platform-tests/html/browsers/browsing-the-web/overlapping-navigations-and-traversals/same-document-nav-cross-document-traversal.html are crashing in debug since their import: ASSERTION FAILED: m_frameLoadComplete /Volumes/Data/worker/macOS-AppleSilicon-Ventura-Debug-Build-EWS/build/Source/WebCore/loader/HistoryController.cpp(526) : void WebCore::FrameLoader::HistoryController::recursiveUpdateForCommit() 1 0x135ac36b0 WTFCrash 2 0x28292e950 WebCore::AudioWorkletProcessor::buildJSArguments(JSC::VM&, JSC::JSGlobalObject&, JSC::MarkedVector<JSC::JSValue, 8ul, WTF::RecordOverflow>&, WTF::Vector<WTF::RefPtr<WebCore::AudioBus, WTF::RawPtrTraits<WebCore::AudioBus>, WTF::DefaultRefDerefTraits<WebCore::AudioBus>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WTF::Vector<WTF::Ref<WebCore::AudioBus, WTF::RawPtrTraits<WebCore::AudioBus>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, WTF::HashMap<WTF::String, std::__1::unique_ptr<WebCore::AudioArray<float>, std::__1::default_delete<WebCore::AudioArray<float>>>, WTF::DefaultHash<WTF::String>, WTF::HashTraits<WTF::String>, WTF::HashTraits<std::__1::unique_ptr<WebCore::AudioArray<float>, std::__1::default_delete<WebCore::AudioArray<float>>>>, WTF::MemoryCompactLookupOnlyRobinHoodHashTableTraits> const&) 3 0x284209a14 WebCore::FrameLoader::HistoryController::recursiveUpdateForCommit() 4 0x284209814 WebCore::FrameLoader::HistoryController::updateForCommit() 5 0x2841d3ec0 WebCore::FrameLoader::transitionToCommitted(WebCore::CachedPage*) 6 0x2841d3370 WebCore::FrameLoader::commitProvisionalLoad() 7 0x284163acc WebCore::DocumentLoader::commitIfReady() 8 0x2841640d8 WebCore::DocumentLoader::finishedLoading() 9 0x284163d4c WebCore::DocumentLoader::notifyFinished(WebCore::CachedResource&, WebCore::NetworkLoadMetrics const&) 10 0x2842f3dd4 WebCore::CachedResource::didAddClient(WebCore::CachedResourceClient&) 11 0x28431e994 WebCore::CachedRawResource::didAddClient(WebCore::CachedResourceClient&)::$_0::operator()(WebCore::ResourceRequest&&)::'lambda'()::operator()() const 12 0x28431ed1c WTF::Detail::CallableWrapper<WebCore::CachedRawResource::didAddClient(WebCore::CachedResourceClient&)::$_0::operator()(WebCore::ResourceRequest&&)::'lambda'(), void>::call() 13 0x28295c26c WTF::Function<void ()>::operator()() const 14 0x2800b3194 WTF::CompletionHandler<void ()>::operator()() 15 0x28419a63c WebCore::DocumentLoader::responseReceived(WebCore::ResourceResponse const&, WTF::CompletionHandler<void ()>&&)::$_8::operator()(WebCore::PolicyAction, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::PolicyCheckIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>) 16 0x28419a42c WTF::Detail::CallableWrapper<WebCore::DocumentLoader::responseReceived(WebCore::ResourceResponse const&, WTF::CompletionHandler<void ()>&&)::$_8, void, WebCore::PolicyAction, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::PolicyCheckIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>::call(WebCore::PolicyAction, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::PolicyCheckIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>) 17 0x11a25c6b4 WTF::Function<void (WebCore::PolicyAction, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::PolicyCheckIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>)>::operator()(WebCore::PolicyAction, WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::PolicyCheckIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>) const
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-25 12:44:15 PDT
<
rdar://problem/109848774
>
zsun
Comment 2
2024-09-17 06:15:49 PDT
https://github.com/WebKit/WebKit/pull/33764
EWS
Comment 3
2024-09-19 01:38:27 PDT
Committed
283904@main
(5364cc17ccbf): <
https://commits.webkit.org/283904@main
> Reviewed commits have been landed. Closing PR #33764 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug