Do recursive update for commit when frame loading is complete. https://bugs.webkit.org/show_bug.cgi?id=256976

Reviewed by Chris Dumez.

In updateForCommit, we call recursiveUpdateForCommit to tell all
other frames to commit their provisional items and restore scroll
positions. This should only be called when the frame loading is complete.
This fixes an assertion failure for a couple of test cases with the combination
of cross document traversal and same document navigation.

* LayoutTests/TestExpectations:
* Source/WebCore/loader/HistoryController.cpp:
(WebCore::HistoryController::updateForCommit):
* Source/WebCore/loader/HistoryController.h:

Canonical link: https://commits.webkit.org/283904@main